--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "media-player",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Proyecto del Curso Profesional de JavaScript",
   "main": "index.js",
   "scripts": {
-    "start": "live-server"
+    "start": "parcel index.html ejercicios/**/*html"
   },
   "keywords": [
     "training"
@@ -12,6 +12,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "live-server": "^1.2.1"
-  }
+    "live-server": "^1.2.1",
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^4.1.3"
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
